--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,38 @@
-*.gem
-*.rbc
-/.config
-/coverage/
-/InstalledFiles
-/pkg/
-/spec/reports/
-/spec/examples.txt
-/test/tmp/
-/test/version_tmp/
-/tmp/
+# macOS 
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# Used by dotenv library to load environment variables.
-# .env
+# Windows 
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-# Ignore Byebug command history file.
-.byebug_history
+# Linux 
+*~
 
-## Specific to RubyMotion:
-.dat*
-.repl_history
+# IDE
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+*.swp
+
+# 
+.env
+.env.local
+.env.*.local
+
+# 
+*.log
+*.bak
+*.tmp
+*.cache
+
+# 
+dist/
 build/
-*.bridgesupport
-build-iPhoneOS/
-build-iPhoneSimulator/
+out/
 
-## Specific to RubyMotion (use of CocoaPods):
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-# vendor/Pods/
-
-## Documentation cache and generated files:
-/.yardoc/
-/_yardoc/
-/doc/
-/rdoc/
-
-## Environment normalization:
-/.bundle/
-/vendor/bundle
-/lib/bundler/man/
-
-# for a library or gem, you might want to ignore these files since the code is
-# intended to run in multiple environments; otherwise, check them in:
-# Gemfile.lock
-# .ruby-version
-# .ruby-gemset
-
-# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
-.rvmrc
-
-# Used by RuboCop. Remote config files pulled in from inherit_from directive.
-# .rubocop-https?--*
-
-
-
+# GitHub Pages
+.gh-pages/
